[gd_scene load_steps=4 format=3 uid="uid://ghc5xt2oj0t7"]

[ext_resource type="Script" uid="uid://bnchtrw1st2kp" path="res://Items/Electromagnet/ElectromagnetBeam/electromagnet_beam.gd" id="1_ysjvx"]
[ext_resource type="AudioStream" uid="uid://b16htaugyp4le" path="res://Items/Electromagnet/ElectromagnetBeam/assets/RAILGUN.wav" id="2_lsq0u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6isp"]
size = Vector2(100, 10)

[node name="ElectromagnetBeam" type="Area2D"]
collision_layer = 0
collision_mask = 16
monitorable = false
script = ExtResource("1_ysjvx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(50, 0)
shape = SubResource("RectangleShape2D_n6isp")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 100, 0)
default_color = Color(1, 1, 0, 1)

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_lsq0u")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
